--- a/resume.html
+++ b/resume.html
@@ -18,29 +18,39 @@
 
     <header>
       <img src="images/me.jpeg" alt="Image of Laura" class="profile-image">
-      <h1 class="tag name">Hello, I’m Laura.</h1>
-      <p class="tag location">My home is Tokyo, Japan.</p>
+      <h1 class="tag name">Laura's Resume</h1>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>Laura is a dynamic professional based in the vibrant city of Tokyo. She works for <strong>HubSpot</strong>, where she brings her passion for marketing and technology to life. With a deep appreciation for innovative solutions and customer-centric strategies, Laura plays a key role in helping businesses grow and thrive in the digital age.</p>
-        <p>When she's not immersed in her work at HubSpot, Laura loves to explore the beautiful and bustling streets of Tokyo through the lens of her camera. Photography is more than just a hobby for Laura—it's a way of capturing the essence of the world around her and preserving moments in time. Whether it's the serene cherry blossoms in spring or the vibrant neon lights of Shibuya at night, Laura finds endless inspiration in the diverse and dynamic scenes of the city.</p>
-        <p>Laura's passion for photography complements her professional life, offering her a creative outlet and a fresh perspective that she brings to her work at HubSpot. Her ability to see the world from different angles helps her to think outside the box and approach challenges with innovative solutions.</p>
+        <h2>General Information</h2>
+        <p><strong>Email:</strong> laura@example.com</p>
+        <p><strong>Location:</strong> Tokyo, Japan</p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/laura">linkedin.com/in/laura</a></p>
+        <p><strong>Portfolio:</strong> <a href="https://www.laura-portfolio.com">www.laura-portfolio.com</a></p>
+        <h2>About Me</h2>
+            <p>I am a dedicated professional based in Tokyo, working for HubSpot. With a passion for marketing and technology, I specialize in creating customer-centric strategies that drive business growth. Outside of work, I am an avid photographer, capturing the diverse and dynamic scenes of Tokyo, from serene cherry blossoms to the vibrant city nightlife.</p>
+        </div>
       </div> 
 
       <div class="card">
-        <h2>Goals</h2>
-        <p>I want to master to build a website to display my images. This includes</p>
-        <ul class="skills">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>Landscape pictures</li>
-          <li>Animal pictures</li>
-          <li>Wedding pictures</li>
-        </ul>
+        <h2>Work Experience</h2>
+            <ul>
+                <li>
+                    <strong>HubSpot - Tokyo, Japan</strong> <br>
+                    <em>Marketing Specialist</em> (2019 - Present) <br>
+                    - Develop and execute marketing campaigns focused on customer acquisition and retention. <br>
+                    - Collaborate with global teams to implement localized strategies. <br>
+                    - Analyze market trends to enhance product positioning and brand visibility.
+                </li>
+                <li>
+                    <strong>XYZ Corp - Tokyo, Japan</strong> <br>
+                    <em>Content Creator</em> (2016 - 2019) <br>
+                    - Created engaging content for social media platforms and company blogs. <br>
+                    - Managed editorial calendars and coordinated with design teams. <br>
+                    - Contributed to a 30% increase in website traffic through targeted content strategies.
+                </li>
+            </ul>
       </div> 
 
     </main>
